Iterator design pattern coded on the Database class